name:                eta-fib-service
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable eta-fib-service
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , servant-server == 0.12
                     , aeson == 1.2.3.0
                     , wai-servlet-handler-jetty == 0.1.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       DataKinds
                       TypeOperators
                       FlexibleContexts
                       
